dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-deployment
  namespace: echoserver-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echoserver-application
  template:
    metadata:
      labels:
        app: echoserver-application
    spec:
      containers:
      #- image: opsdockerimage/echoserver:1.10 
      #- image: nginxdemos/hello:0.3
      #- image: hashicorp/http-echo
      #- image: odeo/rootless-nginx
      - image: hashicorp/http-echo
      
        imagePullPolicy: Always
        name: echoserver-application
        ports:
        - containerPort: 8080
