dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: echoserver-ns
  name: echoserver-ingress

spec:
  tlsSecurityProfile:
    Intermediate: {}
    type: Intermediate
  rules:
  - host: "gitops-tutorial.numerique-interieur.com" 
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name:  echoserver-service
              port:
                  number: 8080
